[gd_scene load_steps=85 format=3 uid="uid://ibooixg6ee1u"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_bh1am"]
[ext_resource type="Texture2D" uid="uid://blqow06sbnhs1" path="res://Assets/SpriteSheet/EnemyIdleSprite.png" id="2_we5s4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vq8rh"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g01e5"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_syn7y"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndrtx"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcwyt"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3dks"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v43jw"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uv14"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw7n2"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt62f"]
atlas = ExtResource("2_we5s4")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmopg"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5wg4"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62cao"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibut5"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h70lp"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2klot"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cntp"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qci0y"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idr5r"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj2br"]
atlas = ExtResource("2_we5s4")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0bnr"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg8dw"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fydx1"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_by1h8"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwaro"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kehrv"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8odp8"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_udrua"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d03el"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_isa2l"]
atlas = ExtResource("2_we5s4")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qhk3"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyi4q"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7equd"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iyd7"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y56k"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lvft"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn0rf"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_371gy"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhida"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph4hu"]
atlas = ExtResource("2_we5s4")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6weme"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhix6"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hseic"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j7it"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i33pu"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7e1m"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1uu6"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tfxr"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bdtw"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hml18"]
atlas = ExtResource("2_we5s4")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_67r8s"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umo1d"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnwke"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d0nr"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ee4m"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe0v6"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ptl8"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o16l1"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h4f3"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltccb"]
atlas = ExtResource("2_we5s4")
region = Rect2(576, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhp3w"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl2sd"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u8c4"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xpla"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_prk2i"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ethma"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxmuh"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4dv8"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6uj3"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cjk0"]
atlas = ExtResource("2_we5s4")
region = Rect2(576, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26ecx"]
atlas = ExtResource("2_we5s4")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7chi"]
atlas = ExtResource("2_we5s4")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kqa2"]
atlas = ExtResource("2_we5s4")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja4ye"]
atlas = ExtResource("2_we5s4")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0wfj"]
atlas = ExtResource("2_we5s4")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsaqv"]
atlas = ExtResource("2_we5s4")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_klijy"]
atlas = ExtResource("2_we5s4")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_454k2"]
atlas = ExtResource("2_we5s4")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0cwj"]
atlas = ExtResource("2_we5s4")
region = Rect2(512, 448, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dqk00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq8rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g01e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syn7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndrtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcwyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3dks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v43jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uv14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw7n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt62f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmopg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5wg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62cao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibut5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h70lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2klot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cntp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qci0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idr5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj2br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0bnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg8dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fydx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by1h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwaro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kehrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8odp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udrua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d03el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isa2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qhk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyi4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7equd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iyd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y56k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lvft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn0rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_371gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhida")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph4hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6weme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhix6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hseic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j7it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i33pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7e1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1uu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tfxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bdtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hml18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67r8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umo1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnwke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d0nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ee4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe0v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ptl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o16l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h4f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltccb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhp3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl2sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u8c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xpla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prk2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ethma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxmuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4dv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6uj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cjk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26ecx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7chi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kqa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja4ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0wfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsaqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klijy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_454k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0cwj")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2wx6w"]
radius = 29.0689

[sub_resource type="CircleShape2D" id="CircleShape2D_hkvib"]
radius = 29.0172

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_bh1am")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dqk00")
autoplay = "default"
frame_progress = 0.822557

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2wx6w")

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_hkvib")

[node name="Stuntime" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
[connection signal="timeout" from="Stuntime" to="." method="_on_stuntime_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
